# wpilib-agent-tools

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md
.cursor/rules/: wpilib-agent-tools-scoped.mdc
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml  validation.md
agent/src/wpilib_agent_tools/: __init__.py  cli.py
agent/src/wpilib_agent_tools/commands/: __init__.py  graph.py  harness.py  keys.py  logs.py  query.py  record.py  rules.py  sandbox.py  sim.py
agent/src/wpilib_agent_tools/integrations/codex/skill_bundle/: SKILL.md
agent/src/wpilib_agent_tools/integrations/codex/skill_bundle/references/: validation.md
agent/src/wpilib_agent_tools/integrations/codex/skill_bundle/references/profiles/: 2026-robot-code.md
agent/src/wpilib_agent_tools/lib/: analysis.py  log_reader.py  nt_recorder.py  output.py  sandbox_manager.py  wpilog_struct_decoder.py
agent/src/wpilib_agent_tools/rule_templates/: core_always_on.mdc  scoped_optional.mdc  token_efficient_always_on.mdc
agent/tests/: test_assertions.py  test_cli_output_policy.py  test_graph_non_numeric.py  test_log_reader_raw_schema.py  test_nt_recorder.py  test_query_ds_keys.py  test_query_math_modes.py  test_rules_install.py  test_sim_log_integration.py  test_wpilog_struct_decoder.py
docs/: CHIEF_DELPHI_POST.md  DISTRIBUTION.md  VALIDATION_STATUS.md
reference/agent/tools/: graph_tool.py  list_keys.py  (+5 more)
scripts/: install_all.sh  install_cursor_rules.sh  run_cli.sh  smoke.sh  sync_skill.sh  validate_robot_repo.sh  validate_skill.py
skills/wpilib-agent-tools/: SKILL.md
(+6 files in other folders)
